(lang dune 3.10)

(name ocaml_crud)

(generate_opam_files true)

(source
 (github OrderAndcho4s/ocaml_c))

(authors "orderandchaos")

(maintainers "orderandchaos")

(package
 (name ocaml_crud)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
